--- a/client/react/components/Accordion/Accordion.css
+++ b/client/react/components/Accordion/Accordion.css
@@ -1,5 +1,6 @@
 .Accordion {
   overflow: hidden;
+  max-height: 30px;
   width: 100%;
   transition: .3s max-height ease-out;
   padding-bottom: 10px;
@@ -10,6 +11,7 @@
 }
 
 .Accordion.expanded {
+  max-height: 800px;
   transition: .3s max-height ease-in;
 }
 
@@ -18,12 +20,12 @@
   cursor: pointer;
   margin-bottom: 10px;
   user-select: none;
-  padding: 15px 20px;
+  padding: 10px 20px;
 }
 
 .Accordion .accordionIcon {
   float: right;
-  margin-top: -3px;
+  margin-top: 2px;
   cursor: pointer;
   transition: all .3s ease-out;
 }
