--- a/client/react/components/Form/Input.css
+++ b/client/react/components/Form/Input.css
@@ -73,3 +73,11 @@ input[type=number]::-webkit-outer-spin-button {
   pointer-events: none;
   touch-action: none;;
 }
+
+.TextArea.textareaJson {
+  height: 180px;
+}
+
+.TextArea.textareaString {
+  height: 100px;
+}
